Gap summary view created

--- a/org.husby.mindthegap/.settings/org.eclipse.core.resources.prefs
+++ b/org.husby.mindthegap/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/org/husby/mindthegap/views/GapDetailView.java=UTF-8
+encoding//src/org/husby/mindthegap/views/GapSummaryView.java=UTF-8
